    - Fix bug in  __eq__():
      self.suit() == self.suit() to self.suit() == other.suit()
  - Deck class:
    - __copy__() and __deepcopy__() methods were implemented.
------------------------------------------------------------------
08/02/2024
- In Cards.py:
  - class SuitDeck created
  - class Card:
    - rename setter methods with underscore.
    - change _set_value().
      Now J -> 11, Q -> 12 and K -> 13.
      This change was necessary for easier implementation 
      of the push() method in SuitDeck. 
  - class Deck updated:
    - top() method added.
------------------------------------------------------------------
09/02/2024
- test2.py and test_path.py were deleted 
- In Cards.py:
  - SuitDeck: completed
  - Deck class:
    - __repr__() added
    - inverse() added
- functionality.py works without graphics
------------------------------------------------------------------
11/02/2024
- Progress on Window class.
  - Use of anchor keyword, sticky
------------------------------------------------------------------
14/02/2024
- In Cards.py:
  - first_cards() created
- In Windoes.py:
  - overlap_image modified
  - draw_card_in_SuitDeck() renamed to draw_suitDeck_card()
  - draw_card() deleted
  - Shuffle button tests with self.__deck 
------------------------------------------------------------------
15/02/2024
- In Window.py
  - Modify init to take a deck as an arguments
  - _draw_first_cards() modified with inv argument. This is useful for
    soros where we need to print the top three elements in reverse order
    BE VERY CAREFUL WITH THE ORDER OF THE CARDS
  - Add Buttons and Button commands
  ---------------------------------
  - Made Deck a button.
  - Change draw_suitDeck_card
  - find_card() deleted
  ---------------------------------
  - Add self._imgs_folder, modify _load_cards()
  - rename _draw_first_cards() to _draw_top_cards()
  - Add Blank card in soros at the beginning of the game.
- In Card.py
  - rename first_cards() to top_cards()
  